--- a/package.json
+++ b/package.json
@@ -1,24 +1,17 @@
 {
-  "name": "bamazon",
-  "version": "1.0",
-  "description": "Bamazon virtual storefront with MySQL and Node",
-  "main": "bamazonCustomer.js",
+  "name": "Bamazon",
+  "version": "1.0.0",
+  "description": "",
+  "main": "bamazon.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com//jklepach93/bamazon.git"
-  },
+  "keywords": [],
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com//jklepach93/bamazon/issues"
-  },
-  "homepage": "https://github.com//jklepach93/bamazon#readme",
-  "keywords": [],
   "dependencies": {
-    "inquirer": "^3.0.1",
-    "mysql": "^2.13.0"
+    "console.table": "^0.10.0",
+    "inquirer": "^6.0.0",
+    "mysql": "^2.16.0"
   }
 }
